ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend: 
    service: 
      name: python-app-svc 
      port: 
        number: 5000
